--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
+    "gsap": "^3.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-simple-chatbot": "^0.6.1",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^4.4.1",
     "web-vitals": "^1.1.0"
   },
