--- a/chatbot_backend/package.json
+++ b/chatbot_backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "backend",
+  "name": "chatbot_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-  	"start":"concurrently \"npm start --prefix ../chatbot_backend\" \" nodemon server.js --exec babel-node --presets env\"",
+    "start": "nodemon server.js --exec babel-node --presets env",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "serve": "node dist/server.js",
@@ -15,11 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.0",
+    "mongoose": "^5.12.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
