--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  	"start":"concurrently \"npm start --prefix ../chatbot_backend\" \" nodemon server.js --exec babel-node --presets env\"",
+    "start": "concurrently \"npm run chatbot\" \" npm run backend\" \"npm run frontend\"",
+    "chatbot": "npm start --prefix ../chatbot_backend",
+    "backend": "nodemon server.js --exec babel-node --presets env",
+    "frontend": "npm start --prefix ../frontend",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "serve": "node dist/server.js",
