--- a/chatbot_backend/package.json
+++ b/chatbot_backend/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
